[gd_scene load_steps=3 format=3 uid="uid://b601kr4tgtteq"]

[ext_resource type="Script" path="res://script/main_window.gd" id="1_g6dly"]
[ext_resource type="Texture2D" uid="uid://djqjqjduxg1ns" path="res://window.png" id="3_uxnxw"]

[node name="MainWindow" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_left = 392.0
offset_top = 170.0
offset_right = 1075.0
offset_bottom = 537.0
script = ExtResource("1_g6dly")

[node name="Window" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00308, 0.997995)
mouse_filter = 1
texture = ExtResource("3_uxnxw")
region_rect = Rect2(40, 30, 214, 244)
patch_margin_left = 10
patch_margin_top = 70
patch_margin_right = 30
patch_margin_bottom = 10

[node name="Grabber" type="Control" parent="Window"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 0
mouse_filter = 1

[node name="Left" type="ColorRect" parent="Window/Grabber"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
color = Color(1, 1, 1, 0.494118)

[node name="Top" type="ColorRect" parent="Window/Grabber"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
color = Color(1, 1, 1, 0.494118)

[node name="Right" type="ColorRect" parent="Window/Grabber"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
color = Color(1, 1, 1, 0.494118)

[node name="Down" type="ColorRect" parent="Window/Grabber"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
color = Color(1, 1, 1, 0.494118)

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="EnemyInfo" type="GridContainer" parent="CenterContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="EnemyHealth" type="Label" parent="CenterContainer/PanelContainer/EnemyInfo"]
layout_mode = 2

[node name="CurScale" type="Label" parent="CenterContainer/PanelContainer/EnemyInfo"]
layout_mode = 2

[node name="ScaleLimit" type="Label" parent="CenterContainer/PanelContainer/EnemyInfo"]
layout_mode = 2

[node name="ScaleSpeed" type="Label" parent="CenterContainer/PanelContainer/EnemyInfo"]
layout_mode = 2

[node name="MoveSpeed" type="Label" parent="CenterContainer/PanelContainer/EnemyInfo"]
layout_mode = 2

[node name="PlayerHealth" type="Label" parent="CenterContainer/PanelContainer/EnemyInfo"]
layout_mode = 2

[node name="TimeLimit" type="Label" parent="CenterContainer/PanelContainer/EnemyInfo"]
layout_mode = 2

[connection signal="mouse_entered" from="Window/Grabber" to="." method="_on_grabber_mouse_entered"]
[connection signal="mouse_exited" from="Window/Grabber" to="." method="_on_grabber_mouse_exited"]
